# base64-emoji-parser-rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/parser/: conversion.rs  emoji_pattern.rs  mod.rs
